# living-agent-service

./: .dockerignore  .gitignore  BACKEND_FIX_PLAN.md  DEPLOY.md  DEVELOPMENT_PLAN.md  Dockerfile.rust-check  MIGRATION_STATUS.md  PROJECT_FRAMEWORK.md  README.md  code-analysis-report.md  docker-compose.rust-verify.yml  docker-compose.yml  dockerlog.txt  pom.xml
living-agent-native/: Cargo.toml
living-agent-native/.cargo/: .global-cache
living-agent-native/.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: anyhow-1.0.102.crate  audio-core-0.2.1.crate  audioadapter-2.0.0.crate  audioadapter-buffers-2.0.0.crate  audioadapter-sample-2.0.0.crate  audiopus_sys-0.2.2.crate  bytes-1.11.1.crate  cc-1.2.57.crate  chrono-0.4.44.crate  dasp-0.11.0.crate  dasp_envelope-0.11.0.crate  dasp_frame-0.11.0.crate  dasp_interpolate-0.11.0.crate  dasp_peak-0.11.0.crate  dasp_ring_buffer-0.11.0.crate  dasp_rms-0.11.0.crate  dasp_sample-0.11.0.crate  dasp_signal-0.11.0.crate  (+36 more)
living-agent-native/src/: lib.rs
living-agent-native/src/audio/: mod.rs  opus_codec.rs  processor.rs  resampler.rs  vad.rs
living-agent-native/src/channel/: broadcast_channel.rs  message.rs  mod.rs  mpsc_channel.rs
living-agent-native/src/jni/: audio_jni.rs  channel_jni.rs  knowledge_jni.rs  memory_jni.rs  mod.rs  security_jni.rs
living-agent-native/src/knowledge/: cache.rs  mod.rs  similarity.rs  sqlite_backend.rs  types.rs  vector_store.rs
living-agent-native/src/memory/: backend.rs  entry.rs  mod.rs  query.rs
living-agent-native/src/security/: mod.rs  policy.rs  sandbox.rs  validator.rs
(+963 files in other folders)
