[package]
name = "living-agent-native"
version = "0.1.0"
edition = "2021"
authors = ["SoarCloudAI Team"]
description = "Native performance components for Living Agent Service"
license = "MIT"

[lib]
name = "living_agent_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Audio processing
opus = "0.3.1"
rubato = "1.0.1"
dasp = { version = "0.11", features = ["signal", "interpolate"] }

# JNI bindings
jni = "0.22.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Concurrency
crossbeam = "0.8.4"
parking_lot = "0.12.5"
lazy_static = "1.5.0"

# Database
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Security
sha2 = "0.10.9"
base64 = "0.22.1"
regex = "1.12.3"

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# LRU cache
lru = "0.16.3"

# UUID generation
uuid = { version = "1.6.1", features = ["v4"] }

# Time
chrono = { version = "0.4.44", features = ["serde"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "audio_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
